added a welcome note in index.html

--- a/Search/src/app/profile/profile.component.html
+++ b/Search/src/app/profile/profile.component.html
@@ -3,5 +3,12 @@
     <div class="panel-header">
       {{profile.name}}<small> ({{profile.login}})</small>
     </div>
+    <div class="panel-body">
+        <div class="row">
+            <div class ="col-3">
+                <img src="{{profile.avatar_url}}" alt="">
+            </div>
+        </div>
+    </div>
   </div>
 </div>
