imported bootstrap for styling and responsiiness

--- a/Search/src/app/app.component.html
+++ b/Search/src/app/app.component.html
@@ -7,6 +7,8 @@
   <title>Document</title>
 </head>
 <body>
-  
+  <div class='container'>
+     <app-profile></app-profile>
+    </div>
 </body>
 </html>
