--- a/Search/src/app/profile/profile.component.html
+++ b/Search/src/app/profile/profile.component.html
@@ -1,46 +1,48 @@
 <form action="" class="search-form">
   <div class="form-group">
-      <input type="text" class="form-control" placeholder="Search git users with user name" [(ngModel)]="username" name="username" (keyup)="findProfile()">
+    <input type="text" class="form-control" placeholder="Search git users with user name" [(ngModel)]="username"
+      name="username" (keyup)="findProfile()">
   </div>
 </form>
 <div *ngIf="profile">
-<div class="panel-heading">
-{{profile.name}} <small>({{profile.login}})</small>
-</div>
-<div class="panel body">
-<div class="row">
-<div class="col-sm-3">
-<img src="{{profile.avatar_url}}" class="img-circle img-responsive" alt="profile Image">
-</div>
-<div class="col-sm-5">
-  <ul class="list-group">
+  <div class="panel-heading">
+    {{profile.name}} <small>({{profile.login}})</small>
+  </div>
+  <div class="panel body">
+    <div class="row">
+      <div class="col-sm-3">
+        <img src="{{profile.avatar_url}}" class="img-circle img-responsive" alt="profile Image">
+      </div>
+      <div class="col-sm-5">
+        <ul class="list-group">
           <li class="list-group-item" *ngIf="profile.bio">{{profile.bio}}</li>
-      <li class="list-group-item" *ngIf="profile.email"><a href="emailto:{{profile.email}}">{{profile.email}}</a></li>
-      <li class="list-group-item" *ngIf="profile.telephone">{{profile.telephone}}</li>
-      <li class="list-group-item" *ngIf="profile.hirelable">Available for hire</li>
-  </ul>
-</div>
-  <div class="col-sm-4">
-      <div>
+          <li class="list-group-item" *ngIf="profile.email"><a href="emailto:{{profile.email}}">{{profile.email}}</a>
+          </li>
+          <li class="list-group-item" *ngIf="profile.telephone">{{profile.telephone}}</li>
+        </ul>
+      </div>
+      <div class="col-sm-4">
+        <div class="people">
           <p>
-              <span class="label label-default">{{profile.followers}} Followers</span>
-              <span class="label label-primary">Following{{profile.followers}} </span>
-              <span class="label label-success">{{profile.public_gists}} Public gists</span>
-              <span class="label label-info">{{profile.public_repos}} Public public_repos</span>
+            <span class="label label-default">{{profile.followers}} Followers</span>
+            <span class="label label-primary">Following{{profile.followers}} </span>
+            <span class="label label-success">{{profile.public_gists}} Public gists</span>
+            <span class="label label-info">{{profile.public_repos}} Public public_repos</span>
           </p>
-          <p><a href="{{profile.html_url}}" target="_blank" class="btn btn-success btn-sm">View profile on github</a></p>
+          <p><a href="{{profile.html_url}}" target="_blank" class="btn btn-success btn-sm" id="me">View profile on github</a>
+          </p>
           <div class="panel panel-default">
-              <div class="panel-heading">
-                  <h3 class="panel-title">Repos</h3>
-              </div>
-              <div class="panel-body" *ngFor='let repo of repos'>
+            <div class="panel-heading">
+              <h3 class="panel-title">Repositories</h3>
+            </div>
+            <div class="panel-body" *ngFor='let repo of repos'>
               <p>
-                  {{repo.name}} <a href="{{repo.html_url}}" class="btn btn-warning">View this project on github</a>
+                {{repo.name}} <a href="{{repo.html_url}}" class="btn btn-warning" target="_blank">View this project on github</a>
               </p>
               <p>{{repo.description}}</p>
+            </div>
           </div>
+        </div>
       </div>
+    </div>
   </div>
-</div>
-</div>
-</div>
