--- a/Search/src/styles.css
+++ b/Search/src/styles.css
@@ -1,2 +1,17 @@
-
+span{
+    font-size: 30px;
+    color:darkcyan;
+}
+body{
+    background-color: rgb(159, 158, 248);
+    font-family: 'Oswald', serif;
+}
+h1{
+    text-align: center;
+    font-size:50px;
+    background-color: darkorange;
+}
+#and{
+    font-size: 25px;
+}
 @import "~bootstrap/dist/css/bootstrap.css"
