--- a/Search/src/app/profile/profile.component.css
+++ b/Search/src/app/profile/profile.component.css
@@ -6,3 +6,12 @@
 #me{
     background-color: midnightblue;
 }
+.search-form{
+    font-size:25px;
+}
+#place{
+    font-size: 25px;
+}
+#repos{
+    background-color: bisque;
+}
