created a form in user component.html where the search button aand the submit button will be, added a title in app.component, created an Ng Module in app module.ts

--- a/search/src/app/user/user.component.html
+++ b/search/src/app/user/user.component.html
@@ -1,4 +1,4 @@
-<!-- <form #userForm="ngForm" (ngSubmit)="getUser(userForm)">
+ <form #userForm="ngForm" (ngSubmit)="getUser(userForm)">
   <div class="form-group">
     <label for="typeahead-http">Search here</label>
     <input id="typeahead-http" type="text" class="form-control" [class.is-invalid]="searchFailed" [(ngModel)]="model"
@@ -10,7 +10,7 @@
   <input [disabled]="!userForm.form.valid" type="submit" value="Submit" class="btn btn-success">
 </form>
 
-<div class="row mt-3" *ngIf="user">
+<!-- <div class="row mt-3" *ngIf="user">
   <div class="col-md-3">
     <div class="card">
       <img class="card-img-top img-fluid" src="{{user.avatarUrl}}" alt="Card image cap">
@@ -20,8 +20,8 @@
         <p class="card-text">{{user.bio}}</p>
       </div>
     </div>
-  </div>
-  <div class="col-md-9">
+  </div> -->
+  <!-- <div class="col-md-9">
     <ul class="nav nav-pills">
       <li class="nav-item">
         <span class="nav-link">Repositories <span class="badge badge-secondary">{{user.publicRepos}}</span></span>
@@ -45,4 +45,4 @@
     </div>
     <hr>
   </div>
-</div>. -->
+</div>. --> -->
