--- a/search/src/app/user/user.component.html
+++ b/search/src/app/user/user.component.html
@@ -10,7 +10,7 @@
   <input [disabled]="!userForm.form.valid" type="submit" value="Submit" class="btn btn-success">
 </form>
 
-<!-- <div class="row mt-3" *ngIf="user">
+<div class="row mt-3" *ngIf="user">
   <div class="col-md-3">
     <div class="card">
       <img class="card-img-top img-fluid" src="{{user.avatarUrl}}" alt="Card image cap">
@@ -20,7 +20,7 @@
         <p class="card-text">{{user.bio}}</p>
       </div>
     </div>
-  </div> -->
+  </div>
   <!-- <div class="col-md-9">
     <ul class="nav nav-pills">
       <li class="nav-item">
