--- a/search/src/app/user/user.component.html
+++ b/search/src/app/user/user.component.html
@@ -21,7 +21,7 @@
       </div>
     </div>
   </div>
-  <!-- <div class="col-md-9">
+   <div class="col-md-9">
     <ul class="nav nav-pills">
       <li class="nav-item">
         <span class="nav-link">Repositories <span class="badge badge-secondary">{{user.publicRepos}}</span></span>
@@ -33,7 +33,7 @@
         <span class="nav-link">Following <span class="badge badge-secondary">{{user.following}}</span></span>
       </li>
     </ul>
-    <div *ngFor="let repo of repos">
+    <!--<div *ngFor="let repo of repos">
       <div class="card mb-3">
         <div class="card-body">
           <h4 class="card-title">{{repo.name}}</h4>
