--- a/search/src/app/user/user.component.html
+++ b/search/src/app/user/user.component.html
@@ -33,7 +33,7 @@
         <span class="nav-link">Following <span class="badge badge-secondary">{{user.following}}</span></span>
       </li>
     </ul>
-    <!--<div *ngFor="let repo of repos">
+    <div *ngFor="let repositories  of repos">
       <div class="card mb-3">
         <div class="card-body">
           <h4 class="card-title">{{repo.name}}</h4>
@@ -45,4 +45,4 @@
     </div>
     <hr>
   </div>
-</div>. --> -->
+</div>.
