imported Component, GhHttpSErvice, User etc in user component.ts

--- a/search/src/app/user/user.component.html
+++ b/search/src/app/user/user.component.html
@@ -37,7 +37,7 @@
       <div class="card mb-3">
         <div class="card-body">
           <h4 class="card-title">{{repo.name}}</h4>
-          <h6 class="card-subtitle mb-2">{{repo.description}}</h6>
+          <h6 class="card-title2">{{repo.description}}</h6>
           <p class="card-text">{{repo.language}}</p>
           <a class="btn btn-primary" href="{{repo.svnUrl}}" target="_blank">View repository on Github</a>
         </div>
